# meme-collector

./: README.md  meme-collector.cabal  stack.yaml
src/: Main.hs
