name:                meme-collector
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jd95/meme-collector#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff
maintainer:          jeffreydwyer95@outlook.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable meme-collector
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , optparse-applicative
                     , reddit
		     